# cpp-dod-tests

./: .gitignore  CMakeLists.txt  README.md  compiler_flags.cmake  dod_perf.cpp  dod_perfv2.cpp  sources.cmake  variants.cmake
cmake/: utils.cmake
results/AMD-A6-1450-APU-@1.0GHz/Linux-3.16.7.15-1-MANJARO/linux-Clang-3.6/: dod_perf.s  joaquin_dod  output.txt
results/AMD-A6-1450-APU-@1.0GHz/Linux-3.16.7.15-1-MANJARO/linux-Clang-3.6/Debug/: dod_perfv1  dod_perfv1.s  dod_perfv1_output.txt  dod_perfv2  dod_perfv2.s  dod_perfv2_output.txt
results/AMD-A6-1450-APU-@1.0GHz/Linux-3.16.7.15-1-MANJARO/linux-Clang-3.6/Release/: dod_perfv1  dod_perfv1.s  dod_perfv1_output.txt  dod_perfv2  dod_perfv2_output.txt
results/AMD-A6-1450-APU-@1.0GHz/Linux-3.16.7.15-1-MANJARO/linux-GNU-5.2.0/: dod_perf.s  joaquin_dod  output.txt
results/AMD-A6-1450-APU-@1.0GHz/Linux-3.16.7.15-1-MANJARO/linux-GNU-5.2.0/Debug/: dod_perfv1  dod_perfv1.s  dod_perfv1_output.txt  dod_perfv2  dod_perfv2.s  dod_perfv2_output.txt
results/AMD-A6-1450-APU-@1.0GHz/Linux-3.16.7.15-1-MANJARO/linux-GNU-5.2.0/Release/: dod_perfv1  dod_perfv1_output.txt  dod_perfv2  dod_perfv2.s  dod_perfv2_output.txt
results/Intel-Core-i7-4790k-4.5GHz/Linux-3.16.7.16-1-MANJARO/linux-Clang-3.6/Debug/: dod_perfv1  dod_perfv1.s  dod_perfv1_output.txt  dod_perfv2  dod_perfv2.s  dod_perfv2_output.txt
results/Intel-Core-i7-4790k-4.5GHz/Linux-3.16.7.16-1-MANJARO/linux-Clang-3.6/Release/: dod_perfv1  dod_perfv1_output.txt  dod_perfv2  dod_perfv2.s  dod_perfv2_output.txt
results/Intel-Core-i7-4790k-4.5GHz/Linux-3.16.7.16-1-MANJARO/linux-GNU-5.2.0/Debug/: dod_perfv1  dod_perfv1.s  dod_perfv1_output.txt  dod_perfv2  dod_perfv2.s  dod_perfv2_output.txt
results/Intel-Core-i7-4790k-4.5GHz/Linux-3.16.7.16-1-MANJARO/linux-GNU-5.2.0/Release/: dod_perfv1  dod_perfv1.s  dod_perfv1_output.txt  dod_perfv2  dod_perfv2_output.txt
results/Intel-Core-i7-4790k-4.5GHz/Windows-6.2/windows-mingw-GNU-5.1.0/Debug/: dod_perf.s  dod_perfv1.s  dod_perfv1_output.txt  dod_perfv2.s  dod_perfv2_output.txt  output.txt
results/Intel-Core-i7-4790k-4.5GHz/Windows-6.2/windows-mingw-GNU-5.1.0/Release/: dod_perfv1.s  dod_perfv1_output.txt  dod_perfv2.s  dod_perfv2_output.txt  output.txt
results/Intel-Core-i7-4790k-4.5GHz/Windows-6.2/windows-win32-MSVC-14.0/Debug/: dod_perf.asm  dod_perfv1.asm  dod_perfv1_output.txt  dod_perfv2.asm  dod_perfv2_output.txt  output.txt
results/Intel-Core-i7-4790k-4.5GHz/Windows-6.2/windows-win32-MSVC-14.0/Release/: dod_perfv1.asm  dod_perfv1_output.txt  dod_perfv2.asm  dod_perfv2_output.txt  output.txt
results/Intel-Core-i7-4790k-4.5Ghz/Windows-6.2/windows-mingw-GNU-5.1.0/: dod_perf.s  output.txt
results/Intel-Core-i7-4790k-4.5Ghz/Windows-6.2/windows-win32-MSVC-14.0/: dod_perf.asm  output.txt
